force-app/main/default/objects/Case_Status_Timer__c/Case_Status_Timer__c.object-meta.xml
<CustomObject>
    <label>Case Status Timer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Case Status Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Status Timers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>