force-app/main/default/objects/Case_Status_Timer__c/fields/Time_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Status__c</fullName>
    <formula>(( End_Time__c  -  Start_Time__c )*24*60) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time In Status(Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>