force-app/main/default/objects/Case_Status_Timer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Status__c</columns>
    <columns>To_Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Time_In_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>